<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="productEntity"
            type="com.productstore.data.localDataSource.ProductEntity" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:padding="@dimen/dimen_large"
            tools:context=".presentation.productDetail.UpdateProductDetailFragment">

            <TextView
                android:id="@+id/product_title"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_marginTop="@dimen/dimen_normal"
                android:scaleType="fitXY"
                android:src="@drawable/add_a_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_title"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/product_choose_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/black_opacity88"
                android:gravity="center"
                android:padding="@dimen/dimen_small"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16_sp"
                app:layout_constraintBottom_toBottomOf="@id/product_image"
                app:layout_constraintEnd_toEndOf="@id/product_image"
                app:layout_constraintStart_toStartOf="@id/product_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_small"
                android:hint="@string/label_name"
                app:layout_constraintTop_toBottomOf="@id/product_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:text="@{productEntity.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_small"
                android:hint="@string/label_description"
                app:layout_constraintTop_toBottomOf="@id/product_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:text="@{productEntity.description}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_small"
                android:hint="@string/label_price"
                app:layout_constraintTop_toBottomOf="@id/product_description_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@{productEntity.formattedPrice()}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_category_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_small"
                android:hint="@string/label_category"
                app:layout_constraintTop_toBottomOf="@id/product_price_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:text="@{productEntity.category}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/product_update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_normal"
                android:paddingHorizontal="@dimen/dimen_small"
                android:text="@string/action_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_category_layout" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
